# perception-orogen-stereo

./: .gitignore  CMakeLists.txt  Disparity_Type.h  dense_stereo.orogen  deprecated_Disparity_Type.h  manifest.xml  stereo.orogen
scripts/: config.rb  log_2_calib.rb  log_2_png.rb  log_to_dense_to_png.rb  process_dense_stereo.rb  process_stereo.rb
tasks/: CMakeLists.txt  Task.cpp  Task.hpp
